# seafox-lang

./: CMakeLists.txt  README.md  file.fox  run
include/: chunk.h  common.h  compiler.h  debug.h  fox_memory.h  hashtable.h  memory.h  object.h  runtime_error.h  scanner.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  fox_memory.c  hashtable.c  main.c  memory.c  object.c  runtime_eror.c  scanner.c  value.c  vm.c
util/: countlines.sh  identifier_type.py  pratt_table.py
